[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-sam3-inference"
version = "0.1.0"
description = "Zero-shot segmentation library based on SAM3 for geospatial imagery (GeoTIFF)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mandresy Andriantsoanavalona", email = "mandresy.andriantsoanavalona@gmail.com" }]
keywords = ["geospatial", "segmentation", "SAM3", "GeoTIFF", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=1.13.0",
    "huggingface-hub>=0.30.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "rasterio>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "affine>=2.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
demo = [
    "gradio>=5.0.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
Repository = "https://github.com/mandresyandri/geo-sam3-lab"

[tool.hatch.build.targets.wheel]
packages = ["geo_sam3_inference"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::rasterio.errors.NotGeoreferencedWarning"]

[tool.coverage.run]
source = ["geo_sam3_inference"]
